prometheus/helm/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-route
  namespace: prometheus
spec:
  parentRefs:
    - name: public-gateway
      namespace: nginx-gateway
  hostnames:
    - "grafana.domain"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-grafana
          port: 80
